# git-issues-rss

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: feed.py
